# spritebot_storage

./: .gitignore  Cargo.toml  Readme.md  license.txt
develop_binary/: Cargo.toml
develop_binary/src/: main.rs
spritebot_storage/: Cargo.toml
spritebot_storage/src/: animdata_xml.rs  error.rs  lib.rs
