[package]
name = "spritebot_storage"
version = "0.1.0"
edition = "2021"
license = "mit"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs = "0.10.0"
image = "0.24.5"
quick-xml = { version = "0.31.0", features = [ "serialize" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
thiserror = "1.0.38"