[package]
name = "spritebot_storage"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A library to read and write SpriteBot files"
keywords = [ "parser" ]
categories = [ "parser-implementations" ]
authors = ["marius851000 <crates@mariusdavid.fr>"]
readme = "../README.md"
repository = "https://github.com/marius851000/spritebot_storage"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs = "0.12.0"
image = "0.25.0"
quick-xml = { version = "0.37.0", features = [ "serialize" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
thiserror = "2.0.0"